# SciTeX-Scholar

./: .gitignore  README.md  demo_literature_search.py  pyproject.toml  requirements.txt  subscription_journal_workflow.py
.claude/: mcp-config.json
.old/: simple_test-20250621_125715.py  test_functionality-20250621_125720.py
docs/to_claude/guidelines/: IMPORTANT-guidelines-command-tree.md  IMPORTANT-guidelines-programming-Art-of-Readable-Code-Rules.md  IMPORTANT-guidelines-programming-Test-Driven-Workflow-Rules.md  IMPORTANT-guidelines-programming-books.md  guidelines-programming-Refactoring-Rules.md
docs/to_claude/guidelines/.old/: IMPORTANT-guidelines-programming-Art-of-Readable-Code-Rules_v01-20250522_160814.md  IMPORTANT-guidelines-programming-Art-of-Readable-Code-Rules_v02-20250522_160817.md  IMPORTANT-guidelines-programming-Art-of-Readable-Code-Rules_v03-20250522_160820.md  IMPORTANT-guidelines-programming-Art-of-Readable-Code-Rules_v04-20250522_160823.md
docs/to_claude/guidelines/python/: IMPORTANT-general.md
docs/to_claude/guidelines/templates/: BluePrint.md
project_management/: BULLETIN-BOARD.md  next_steps-20250522.md  progress-scitex-search-foundation-20250522.md
src/.old/scitex_search-20250621_125910/: search_engine.py  text_processor.py
src/scitex_scholar/: __init__.py  impact_factor_search.py  paper_acquisition.py
src/scitex_search/: __init__.py
tests/: __init__.py  test_package_import.py  test_search_engine.py  test_text_processor.py
